k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-demo-service
spec:
  selector:
    app: api-demo-deployment
  ports:
  - port: 80
    targetPort: 3000
